--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,4 +1,9 @@
 extends base
+include mixins/song
 
 block content
     div
+        each song in songs 
+            +song(song)
+        else 
+            span No Songs found
