--- a/src/views/mixins/song.pug
+++ b/src/views/mixins/song.pug
@@ -2,4 +2,4 @@ mixin song(song)
     a(href=`/songs/${song.id}`)
         span=song.title
         div 
-            span #{song.meta.views}회
+            span #{song.meta.views} views
