--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,16 +2,8 @@ extends base
 include mixins/song
 
 block content
-    div
-        span TOP 10
-    each song, index in songsTop10 
-        ul 
-            li 
-                span=index+1
-                img(src=song.albumImg).albumImg
-                div 
-                    span=song.title 
-                    span  / 
-                    span=song.artist
-                    span  / 
-                    span #{song.meta.play} Plays
+    div.song-grid
+        each song in songs
+            +song(song)
+        else
+            span.empty__message No songs found
