--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,9 +3,8 @@ extends base
 block content 
     if errorMessage
         span=errorMessage 
-    form(method="POST") 
-        label(for="song") song File 
-        input(placeholder="Title", required, type="text", name="title")
-        input(placeholder="Description", required, type="text", name="description")
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
-        input(type="submit", value="Upload song")
+    form(method="POST")  
+        input(placeholder="Song Title", required, type="text", name="songTitle")
+        input(placeholder="Artist", required, type="text", name="artist")
+        input(placeholder="Youtube URL", required, type="text", name="youtubeUrl")
+        input(type="submit", value="등록")
