--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -9,6 +9,8 @@
 @import "./components/footer.scss";
 @import "./components/song.scss";
 @import "./components/nav.scss";
+@import "./components/form.scss";
+@import "./components/shared.scss";
 
 // Screens
 @import "./screens/home.scss";
