--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,10 +5,12 @@ html(lang="ko")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         link(rel="stylesheet", href="/static/css/styles.css")
     body
-        include partials/header              
-        main.main__box
+        section
+            include partials/header              
+        section.main-section
             include partials/nav  
-            block content
+            main
+                block content
         include partials/footer
     script(src="/static/js/main.js") 
     block scripts
